--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 addict==2.4.0
-albumentations==1.3.1
+albumentations==1.4.2
 fire==0.5.0
-imgaug==0.4.0
-numpy==1.23.5
+imageio==2.33.1
+matplotlib==3.6.3
+numpy==1.24.4
 opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 Pillow==9.3.0
+PyWavelets==1.4.1
 PyYAML==6.0
 scikit-image==0.21.0
-segmentation_models_pytorch @ git+https://github.com/qubvel/segmentation_models.pytorch@6db76a1106426ac5b55f39fba68168f3bccae7f8
-torch==2.0.0.dev20230208
-torchaudio==2.0.0.dev20230208
-torchvision==0.15.0.dev20230208
+scikit-learn==1.3.2
+scipy==1.10.1
+timm==0.9.7
+torch==2.2.2
+torchmetrics==1.3.2
+torchvision==0.17.2
 tqdm==4.65.0
+
