--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ addict==2.4.0
 albumentations==1.4.2
 fire==0.5.0
 imageio==2.33.1
-matplotlib==3.6.3
+# matplotlib==3.6.3
 numpy==1.24.4
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
@@ -13,8 +13,8 @@ scikit-image==0.21.0
 scikit-learn==1.3.2
 scipy==1.10.1
 timm==0.9.7
-torch==2.2.2
+# torch==2.2.2
 torchmetrics==1.3.2
-torchvision==0.17.2
+# torchvision==0.17.2
 tqdm==4.65.0
 
