--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ albumentations==1.4.2
 fire==0.5.0
 imageio==2.33.1
 # matplotlib==3.6.3
-numpy==1.24.4
+# numpy==1.24.4
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
-Pillow==9.3.0
+# Pillow==9.3.0
 PyWavelets==1.4.1
 PyYAML==6.0
 scikit-image==0.21.0
