--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ PyYAML==6.0
 scikit-image==0.21.0
 scikit-learn==1.3.2
 scipy==1.10.1
+segmentation_models_pytorch
 timm==0.9.7
 # torch==2.2.2
 torchmetrics==1.3.2
