--- a/configs/mobilenetv2.yaml
+++ b/configs/mobilenetv2.yaml
@@ -3,7 +3,7 @@ gpus: [0]
 
 # define model
 model:
-  architecture: Mobilenetv3_small
+  architecture: Mobilenetv3_small_Segmentation
   init_params:
     encoder_name: mobilenet_v2
     encoder_weights: imagenet
@@ -29,14 +29,14 @@ data:
 
   # loaders
   train_dataloader:
-    batch_size: 1
+    batch_size: 8
     shuffle: true
     drop_last: true
     pin_memory: true
     num_workers: 0
 
   valid_dataloader:
-    batch_size: 2
+    batch_size: 8
     shuffle: false
     drop_last: false
     pin_memory: true
@@ -60,10 +60,13 @@ training:
 
   callbacks:
     mask:
-    - name: BatchNormFreezer
+    - name: TensorBoard
       init_params:
-        start_epoch: 0
-        freeze_affine: false
+        log_dir: logs/mobilenetv2
+    # - name: BatchNormFreezer
+    #   init_params:
+    #     start_epoch: 0
+    #     freeze_affine: false
 
   optimizer:
     name: Adam
